re PR c++/32898 (Definition of variable N::i outside namespace N not rejected)

PR c++/32898
	* name-lookup.c (set_decl_namespace): lookup_qualified_name failure
	is error_mark_node rather than NULL_TREE.
	* pt.c (check_explicit_specialization): Likewise.

	* g++.dg/lookup/ns3.C: New test.

From-SVN: r127749